--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-generator-github",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Github generator for Hexo.",
   "main": "index",
   "directories": {
@@ -25,8 +25,7 @@
     "url": "http://ieclipse.cn"
   },
   "license": "MIT",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "github": "^0.2.4",
     "lodash": "^4.6.1",
