--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
-    "github": "^0.2.4",
-    "lodash": "^4.6.1",
-    "urllib-sync": "^1.1.2"
+    "axios": "^0.19.0",
+    "lodash": "^4.6.1"
   }
 }
